Fixes to metaobject handling

1) Due to changes to metaobjects, QAxBase::qt_static_metacall has
replaced a direct qt_metacall use in ActiveQt. The qt_static_metacall
function offsets the method id, which seems to be necessary when slots
are invoked via Qt, but breaks when invocation comes via COM interface.
Fixed by correcting the offset where necessary.

2) In MetaObjectGenerator::metaObject() function (qaxbase.cpp), the
assert Q_ASSERT(!typeName.isEmpty()) is wrong, as empty typename is a
valid result here. Removed the assert.

3) The type_map in qaxserver.cpp needs "void" -> "void" mapping, as
QMetaMethod::typeName() no longer returns empty string for void.

Task-number: QTBUG-25804
Change-Id: I53fcae5ac3134b7da85ff2ab2e93f01460da7583
Reviewed-by: Kent Hansen <kent.hansen@nokia.com>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@nokia.com>